<resources>
    <string name="app_name">Exchange</string>
    <string name="email_error">Invalid email</string>
    <string name="pass_error">Invalid password</string>
    <string name="email" translatable="false">Email</string>
    <string name="pass">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_fail">Sign in failed</string>
    <string name="sign_up_fail">Sign up failed</string>
    <string name="user_not_exists">Such user does not exists</string>
    <string name="wrong_pass">Password is wrong</string>
    <string name="user_exists">Such user already exists</string>
    <string name="number">Number</string>
    <string name="sign_out">Sign out</string>
    <string name="to">to</string>
    <string name="calc">Calculate</string>
    <string name="result">Result</string>
</resources>
